VA-35: Fixed jumping page on tooltip hover

--- a/soresu-form/web/form/style/tooltip.less
+++ b/soresu-form/web/form/style/tooltip.less
@@ -96,6 +96,10 @@
 }
 
 .soresu-tooltip-arviointi-slim > span {
+  max-width: 500px;
+  bottom: 32px;
+  left: -30px;
+
   .box-triangle(105px);
   .box-triangle-down(@light-gray, #fff);
 }
