--- a/va-virkailija/web/va/style/admin.less
+++ b/va-virkailija/web/va/style/admin.less
@@ -602,7 +602,3 @@ table.translation {
     }
   }
 }
-
-#arviointi-tab {
-  margin-bottom: 51px;
-}
